# 204prod.

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_admin_schema.py  24a4aa54a7ae_extend_client_fields.py  c54e654587eb_add_video_url_to_projects.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/db/: base.py  init_db.py  migrations_helpers.py  session.py
backend/app/modules/auth/: api.py  dependencies.py  schemas.py  service.py
backend/app/modules/categories/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/contacts/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/crew/: __init__.py  api.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/media/: api.py  models.py  repository.py  schemas.py  service.py  storage.py
backend/app/modules/projects/: api.py  constants.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/users/: api.py  models.py  repository.py  schemas.py  service.py
backend/app/shared/: __init__.py
backend/app/shared/dependencies/: auth.py
backend/app/shared/schemas/: pagination.py
backend/app/shared/utils/: slug.py
backend/tests/: conftest.py
backend/tests/projects/: test_projects_api.py
docs/: api.md  architecture.md  content-model.md
(+119 files in other folders)
