[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "204prod-backend"
version = "0.1.0"
description = "Backend API for the 204PROD portfolio platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "email-validator>=2.2,<3.0"
]

[tool.setuptools.packages.find]
where = ["."]
