[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "204prod-backend"
version = "0.1.0"
description = "Backend API for the 204PROD portfolio platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "email-validator>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "PyMySQL>=1.1,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "python-dotenv>=1.0,<2.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "PyJWT>=2.9,<3.0"
]

[tool.setuptools.packages.find]
where = ["."]
